# FreakScheme

./: .gitignore  CHANGELOG.md  FreakScheme.cabal  LICENCE  README.md  justfile  stack.yaml
.github/workflows/: haskell-ci.yml
source/: Eval.hs  LispVal.hs  Main.hs  Notes.md  Parser.hs  Prim.hs  Repl.hs
