cabal-version:      2.2
name:               FreakScheme
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/smoge/FreakScheme#readme
license:            GPL-3
license-file:       LICENCE
author:             Bernardo Barros (based on online tutorials)
maintainer:         example@example.com
copyright:          2024 Bernardo Barros and others
category:           Language
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

executable FreakScheme
    hs-source-dirs:     source
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
        UnicodeSyntax

    main-is:            Main.hs
    build-depends:
        , base
        , base-unicode-symbols
        , mtl

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
